# asrbench

./: .dockerignore  .ds-findings.md  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  THIRD-PARTY-LICENSES.md  bench.bat  docker-compose.yml  matrix.json  matrix_bench.py  matrix_example.json  optimize_matrix.json  optimize_matrix.py  pyproject.toml  run_optimize.bat  setup.bat  setup_env.py
.github/workflows/: ci.yml  release.yml
asrbench/: __init__.py  _version.py  config.py  db.py  main.py
asrbench/activity/: logger.py
asrbench/api/: _optimization_models.py  _optimization_multistage.py  _optimization_persistence.py  _optimization_runners.py  datasets.py  metrics.py  models.py  optimization.py  runs.py  system.py  validators.py  ws.py
asrbench/backends/: __init__.py  base.py  faster_whisper.py  parakeet.py  qwen_asr.py  subprocess_backend.py  whisper_cpp.py
asrbench/cli/: app.py  bench_helper.py  compare.py  config_cmd.py  datasets.py  doctor.py  models.py  optimize.py  power.py  run.py  serve.py
asrbench/data/: audio_cache.py  dataset_manager.py
asrbench/data/spaces/: faster_whisper_full.yaml
asrbench/engine/: benchmark.py  compare.py  errors.py  events.py  matrix.py  optimizer.py  transcript_cache.py  two_stage.py  vram.py  wer.py
asrbench/engine/search/: __init__.py  ablation.py  benchmark_executor.py  budget.py  local_1d.py  multidataset.py  multifidelity.py  multistart.py  objective.py  pairwise_grid.py  screening.py  significance.py  space.py  trial.py  validation.py
asrbench/middleware/: __init__.py  auth.py  rate_limit.py
asrbench/preprocessing/: __init__.py  codec.py  ffmpeg_pipeline.py  filters.py  loudness.py  noise.py  pipeline.py  resample.py  vad.py
asrbench/static/: index.html
asrbench/static/assets/: index-7S7sqYYY.js  index-Dv8Djz20.css
auto/: .autotune.json  bench.sh  eval_optimizer.py  program.md  results.tsv
docs/: API.md  IMPLGUIDE.md  PARAM_EXCLUSIONS.md  PRD.md  TASKS.md  TECHSPEC.md
docs/plugins/: parakeet.md  qwen_asr.md
scripts/: check_ui_bundle_freshness.py  gen_api_docs.py  preflight_matrix.py
scripts/benchmarks/: .autotune.json  README.md  bench.sh  eval_wer.py
spaces/: space_clean.yaml  space_noisy.yaml
tests/integration/: conftest.py  test_api_metrics.py  test_api_models.py  test_api_system.py  test_auth.py  test_dataset_fetch_timeout.py  test_datasets_api.py  test_lifespan_recovery.py  test_optimize_global_config_api.py  test_optimize_two_stage_api.py  test_rate_limit.py  test_runs_api.py  test_ui_static_serving.py  test_ws_streams.py
tests/unit/: test_activity_logger.py  test_adaptive_patience.py  test_audio_cache.py  test_backend_space_filter.py  test_benchmark_segment_timeout.py  test_blockwise_bootstrap.py  test_cache_key_context.py  test_cli_app_and_optimize.py  test_cli_config.py  test_cli_datasets.py  test_cli_doctor.py  test_cli_models.py  test_cli_power.py  test_cli_run.py  test_compare_engine.py  test_config.py  test_events.py  test_faster_whisper_backend.py  test_ffmpeg_param_validation.py  test_ffmpeg_pipeline.py  test_iams_optimizer.py  test_matrix_builder.py  test_multidataset_executor.py  test_multifidelity_executor.py  test_optimizer_multidataset_integration.py  test_optimizer_multifidelity_integration.py  test_parakeet_backend.py  test_preprocessing_benchmark_integration.py  test_preprocessing_codec.py  test_preprocessing_loudness.py  test_preprocessing_new_params.py  test_preprocessing_noise.py  test_preprocessing_pipeline.py  test_prior_informed_screening.py  test_quadratic_refinement.py  test_qwen_asr_backend.py  test_sanitize_error.py  test_search_ablation.py  test_search_budget.py  test_search_local_1d.py  (+20 more)
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
ui/src/: App.svelte  main.ts
ui/src/components/: LiveLog.svelte  VRAMBar.svelte
ui/src/lib/: api.js  api.ts  types.ts  ws.js  ws.ts
ui/src/routes/: Compare.svelte  Dashboard.svelte  Datasets.svelte  Doctor.svelte  Models.svelte  Onboarding.svelte  Optimize.svelte  RunDetail.svelte
