[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asrbench"
version = "0.1.0"
description = "ASRbench — fully local, multi-backend ASR benchmarking platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sungur Zahid Erdim" }]
keywords = ["asr", "speech-recognition", "benchmark", "wer", "faster-whisper", "whisper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.34,<0.35",
    "typer[all]>=0.15,<0.16",
    "duckdb>=1.2,<1.3",
    "jiwer>=4.0,<4.1",
    "pynvml>=11.5,<12.0",
    "pydantic>=2.7,<3.0",
    "soundfile>=0.12,<0.13",
    "soxr>=0.5,<0.6",
    "datasets>=3.3,<4.0",
    "httpx>=0.28,<0.29",
    "whisper-normalizer>=0.1",
]

[project.optional-dependencies]
faster-whisper = ["faster-whisper>=1.1,<2.0"]
whisper-cpp    = ["pywhispercpp>=1.3,<2.0"]
parakeet       = ["nemo_toolkit[asr]>=2.2,<3.0"]
qwen-asr       = ["transformers>=4.47,<5.0", "torch>=2.2"]
tr             = ["trnorm>=0.2,<0.3"]
pdf            = ["weasyprint>=62.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.8",
    "mypy>=1.11",
]

[project.scripts]
asrbench = "asrbench.cli.app:app"

[project.entry-points."asrbench.backends"]
faster-whisper = "asrbench.backends.faster_whisper:FasterWhisperBackend"
whisper-cpp    = "asrbench.backends.whisper_cpp:WhisperCppBackend"
parakeet       = "asrbench.backends.parakeet:ParakeetBackend"
qwen-asr       = "asrbench.backends.qwen_asr:QwenASRBackend"

[tool.hatch.build.targets.wheel]
packages = ["asrbench"]
include   = ["asrbench/static/**"]

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version      = "3.11"
strict              = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
