[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asrbench"
dynamic = ["version"]
description = "ASRbench — fully local, multi-backend ASR benchmarking platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sungur Zahid Erdim" }]
keywords = ["asr", "speech-recognition", "benchmark", "wer", "faster-whisper", "whisper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "typer>=0.15,<1.0",
    "duckdb>=1.2,<2.0",
    "jiwer>=4.0,<5.0",
    "pynvml>=11.5,<13.0",
    "pydantic>=2.7,<3.0",
    "soundfile>=0.12,<0.13",
    "soxr>=0.5,<1.0",
    "datasets>=3.3,<5.0",
    "httpx>=0.28,<1.0",
    "whisper-normalizer>=0.1,<1.0",
]

[project.optional-dependencies]
faster-whisper = ["faster-whisper>=1.1,<2.0"]
whisper-cpp    = ["pywhispercpp>=1.3,<2.0"]
tr             = ["trnorm @ git+https://github.com/ysdede/trnorm.git", "scipy>=1.11,<2.0"]
preprocessing  = [
    "pyloudnorm>=0.1",
    "noisereduce>=3.0,<4.0",
    "scipy>=1.11,<2.0",
]
pdf            = ["weasyprint>=62.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.8",
    "mypy>=1.11",
]

[project.scripts]
asrbench = "asrbench.cli.app:app"

[project.entry-points."asrbench.backends"]
faster-whisper = "asrbench.backends.faster_whisper:FasterWhisperBackend"
whisper-cpp    = "asrbench.backends.whisper_cpp:WhisperCppBackend"
# Parakeet and Qwen-ASR ship as third-party plugin templates under
# docs/plugins/ — they pull in very heavy deps (NeMo, PyTorch) whose CUDA
# coupling varies by host, so they are deliberately not registered here.

[tool.hatch.version]
path = "asrbench/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["asrbench"]
include   = ["asrbench/static/**", "asrbench/data/spaces/**"]

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version      = "3.11"
strict              = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
