[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asrbench"
dynamic = ["version"]
description = "ASRbench — fully local, multi-backend ASR benchmarking platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sungur Zahid Erdim" }]
keywords = ["asr", "speech-recognition", "benchmark", "wer", "faster-whisper", "whisper"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "typer>=0.15,<1.0",
    "duckdb>=1.2,<2.0",
    "jiwer>=4.0,<5.0",
    "pynvml>=11.5,<13.0",
    "pydantic>=2.7,<3.0",
    "soundfile>=0.12,<0.13",
    "soxr>=0.5,<1.0",
    "datasets>=3.3,<5.0",
    "httpx>=0.28,<1.0",
    "whisper-normalizer>=0.1,<1.0",
]

[project.optional-dependencies]
faster-whisper = ["faster-whisper>=1.1,<2.0"]
whisper-cpp    = ["pywhispercpp>=1.3,<2.0"]
# NVIDIA Parakeet via NeMo. NeMo's wheel is large (~1 GB) and its
# install script assumes a working CUDA toolkit; the upstream README
# has platform-specific hints. Apache-2.0 runtime; the checkpoints
# are CC-BY-4.0.
parakeet       = [
    "nemo_toolkit[asr]>=1.23,<2.0",
    "torch>=2.1,<3.0",
    "omegaconf>=2.3,<3.0",
]
# Qwen-Audio via HuggingFace Transformers. **License warning**: the
# Qwen Community License restricts large-scale commercial use — read
# https://github.com/QwenLM/Qwen2-Audio/blob/main/LICENSE before
# enabling this in production.
qwen           = [
    "transformers>=4.45,<5.0",
    "torch>=2.1,<3.0",
    "accelerate>=0.30,<2.0",
    "librosa>=0.10,<1.0",
]
tr             = ["trnorm @ git+https://github.com/ysdede/trnorm.git", "scipy>=1.11,<2.0"]
preprocessing  = [
    "pyloudnorm>=0.1",
    "noisereduce>=3.0,<4.0",
    "scipy>=1.11,<2.0",
]
pdf            = ["weasyprint>=62.0"]
observability  = ["prometheus-fastapi-instrumentator>=7.0,<8.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14",
    "pytest-xdist>=3.6",
    "hypothesis>=6.0",
    "ruff>=0.8",
    "mypy>=1.11",
    "pre-commit>=4.0",
]

[project.scripts]
asrbench = "asrbench.cli.app:app"

[project.entry-points."asrbench.backends"]
faster-whisper = "asrbench.backends.faster_whisper:FasterWhisperBackend"
whisper-cpp    = "asrbench.backends.whisper_cpp:WhisperCppBackend"
# Parakeet and Qwen-Audio are registered but only importable when the
# matching extra is installed. `load_backends()` catches the ImportError
# at discovery time, so a fresh install without these extras still shows
# only the wired-up backends in `asrbench doctor`.
parakeet       = "asrbench.backends.parakeet:ParakeetBackend"
qwen_asr       = "asrbench.backends.qwen_asr:QwenASRBackend"

[tool.hatch.version]
path = "asrbench/_version.py"

[tool.hatch.metadata]
# The `tr` extra pulls trnorm straight from GitHub. Direct references
# are required for that to resolve under Hatchling's metadata validator.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["asrbench"]
include   = ["asrbench/static/**", "asrbench/data/spaces/**"]

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
# Active rule sets:
#   E / F  — pycodestyle + pyflakes (correctness + style)
#   I      — isort (import ordering)
#   UP     — pyupgrade (use modern Python syntax)
#   B      — flake8-bugbear (likely bugs: mutable defaults, assert (), …)
#   RUF    — ruff-native rules (e.g. RUF013 implicit Optional)
#   SIM    — flake8-simplify (collapse unnecessary branches)
#   C4     — flake8-comprehensions (dict/set/list idioms)
# Rule sets still on the roadmap:
#   S      — bandit security checks (flip on once Faz 10 follow-up lands)
#   ANN    — type-annotation coverage (Faz 10 follow-up; needs a sweep)
select = ["E", "F", "I", "UP", "B", "RUF", "SIM", "C4"]
ignore = [
    # RUF001/RUF002/RUF003: allow ambiguous unicode characters — the docstrings
    # use em-dashes and non-breaking spaces deliberately.
    "RUF001",
    "RUF002",
    "RUF003",
    # SIM102: nested-if collapses aren't always clearer when each arm carries
    # a comment or a short-circuit rationale. Revisit case-by-case later.
    "SIM102",
    # SIM113: `enumerate()` isn't always clearer than an explicit counter when
    # the counter only advances on a subset of iterations.
    "SIM113",
]

[tool.ruff.lint.per-file-ignores]
# Tests can use asserts, ignore annotations, broad exception raises,
# and the contextlib.suppress / fire-and-forget task patterns that are
# idiomatic in async test scaffolding.
"tests/**" = [
    "S101",   # assert (bandit)
    "ANN",    # missing annotations
    "B017",   # broad pytest.raises(Exception)
    "SIM117", # nested with-statements are clearer in test scaffolding
    "SIM105", # try/except/pass is common in fixtures to swallow teardown noise
    "RUF043", # pytest.raises(..., match=...) regex ambiguity
]
# Typer idioms use function-call defaults (`typer.Option(...)`,
# `typer.Argument(...)`). Flagging them repo-wide would bury actual
# B008 issues without any fix available. B904 too: CLI handlers
# deliberately convert exceptions to `typer.Exit(1)` to hide tracebacks
# from end users — `from exc` would re-attach the chain.
"asrbench/cli/**" = ["B008", "B904"]
"asrbench/api/runs.py" = ["B008"]  # FastAPI Query / Body defaults
"asrbench/api/optimization.py" = ["B008"]
# Library default: the TwoStageConfig factory is cheap and
# instantiating it inside the function body would clutter every
# caller site without changing behaviour.
"asrbench/engine/two_stage.py" = ["B008"]
# Built Vite bundle is generated code; never lint it.
"asrbench/static/**" = ["ALL"]
# Developer-only throwaway benchmark scripts — not part of the package.
"scripts/benchmarks/**" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["asrbench"]

[tool.mypy]
python_version      = "3.11"
strict              = false
ignore_missing_imports = true
# Progressive tightening knobs. Each one catches a class of regression
# without requiring a repo-wide annotation sweep right now:
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
strict_equality = true
no_implicit_optional = true

[[tool.mypy.overrides]]
# Tests intentionally use untyped fixtures and kwargs-heavy helpers.
module = ["tests.*"]
disallow_untyped_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]

[tool.coverage.run]
branch = true
source = ["asrbench"]
omit = [
    "asrbench/_version.py",
    # UI bundling helpers don't carry runtime code paths worth gating.
    "asrbench/static/*",
]

[tool.coverage.report]
# Keep the gate at 70 % while Faz 9 raises coverage to 80 %. Adjust
# upward in lockstep with the added tests — never relax the gate.
fail_under = 70
skip_empty = true
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pragma: no cover",
    "\\.\\.\\.",
]

[tool.coverage.html]
directory = "htmlcov"
